--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -7,15 +7,17 @@
             <!--breadcrumbs-->
             <app-breadcrumbs></app-breadcrumbs>
             <!--Mi sistio de rutas-->
-            <div class="row">
+            <router-outlet></router-outlet>
+
+            <!-- <div class="row">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            <router-outlet></router-outlet>
+                            
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- ============================================================== -->
         <!-- footer -->
