--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,31 @@
     height: 300px;
     border: 10px solid #666;
 }
+
+.w100 {
+    width: 100px;
+}
+
+.w140 {
+    width: 140;
+}
+
+.avatar {
+    border: 1px solid gray;
+    border-radius: 100%;
+    width: 30px;
+}
+
+.oculto {
+    display: none;
+}
+
+.fondo-modal-imagen {
+    background-color: rgba(0, 0, 0, 0.4);
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 9999;
+}
